<resources>
    <string name="app_name">KoraChat</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter Your Email...</string>
    <string name="join_us">Join Us</string>
    <string name="enter_your_name">Enter Your Name...</string>
    <string name="enter_your_phone_number">Enter Your Phone Number...</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
